Lint cleanup (unnecessary toString() calls, Javadoc aesthetics, String.format() fixes).